crates/diffler/src/app/diff/snapshots/diffler__app__diff__lens__tests__the_references_sidebar_previews_each_use.snap
---
source: crates/diffler/src/app/diff/lens.rs
expression: "crate::test_support::render(&mut app).backend()"
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                      References · apply (5)       "
" ▾ src                    +5 -4  modified  src/lib.rs                         +4 -3 █████  ▾ src/lib.rs (2)             "
"▌  ● lib.rs               +4 -3  apply                                                      ▌    1- pub fn apply(price… "
"   ● main.rs              +1 -1  @@ -1,7 +1,8 @@                                            ▌    2-     price * qty     "
"                                ▌   1      pub fn apply(price: u32, qty: u32) -> u32 {                                  "
"                                ▌   2          price * qty                                  ▌    2-     price * qty     "
"                                ▌        1 pub fn 1pply(2rice: u32, 3ty: u32, 4iscount: u   ▌    1+ pub fn apply(price… "
"                                ▌          32) -> u32 {                                     ▌    2+     let total = pr… "
"                                ▌        2     let total = price * qty;                                                 "
"                                ▌        3     total - discount.min(total)                 ▾ src/main.rs (3)            "
"                                    3    4 }                                                ▌    1  use crate::apply;   "
"                                    4    5                                                  ▌    2                      "
"                                    5    6 pub fn other(price: u32) -> u32 {                                            "
"                                ▌   6          price + 1                                    ▌    3  pub fn run() -> u3… "
"                                ▌        7     price + 2                                    ▌    4-     apply(2, 3)     "
"                                    7    8 }                                                ▌    4+     apply(2, 3, 1)  "
"                                                                                                                        "
"                                                                                            ▌    4-     apply(2, 3)     "
"                                                                                            ▌    4+     apply(2, 3, 1)  "
"                                                                                            ▌    5  }                   "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/2 files                                                                        "
