crates/diffler/src/app/diff/snapshots/diffler__app__diff__lens__tests__the_strip_names_each_symbol_and_its_uses_wear_its_colour.snap
---
source: crates/diffler/src/app/diff/lens.rs
expression: terminal.backend()
---
" 1 apply 5 uses in 2 files  2 price 4 uses in apply  3 qty 4 uses in apply  4 discount 2 uses in apply                  "
" Files                           Diff                                                                                   "
" ▾ src                    +5 -4  modified  src/lib.rs                                                        +4 -3 █████"
"▌  ● lib.rs               +4 -3  apply                                                                                  "
"   ● main.rs              +1 -1  @@ -1,7 +1,8 @@                                                                        "
"                                ▌   1      pub fn apply(price: u32, qty: u32) -> u32 {                                  "
"                                ▌   2          price * qty                                                              "
"                                ▌        1 pub fn 1pply(2rice: u32, 3ty: u32, 4iscount: u32) -> u32 {                   "
"                                ▌        2     let total = price * qty;                                                 "
"                                ▌        3     total - discount.min(total)                                              "
"                                    3    4 }                                                                            "
"                                    4    5                                                                              "
"                                    5    6 pub fn other(price: u32) -> u32 {                                            "
"                                ▌   6          price + 1                                                                "
"                                ▌        7     price + 2                                                                "
"                                    7    8 }                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/2 files                                                                        "
